# etch

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yaml  linux-release.yaml  windows-release.yaml
client/etch-cli/: Cargo.toml
client/etch-core/: Cargo.toml
client/etch-core/resources/: mumble-conf.json  mumble.sqlite
client/etch-core/src/: commands.rs  connection.rs  engine.rs  error.rs  events.rs  integration_tests.rs  lib.rs  logger.rs  models.rs  scripting.rs  settings.rs  test_mocks.rs  traits.rs
client/etch-core/src/matrix/: client.rs  mod.rs  service.rs  sync.rs  timeline.rs
client/etch-core/src/mumble/: bridge.rs  cert.rs  mod.rs  process.rs  service.rs
client/etch-gui/: README.md  SCRIPTING.md  THEMING.md  package.json  pnpm-lock.yaml  vite.config.js
client/etch-gui/src/: app.css
client/etch-gui/src-tauri/: Cargo.toml  tauri.conf.json
client/etch-gui/src-tauri/capabilities/: default.json
client/etch-gui/src-tauri/src/: lib.rs  main.rs  sfx.rs
client/etch-gui/src/lib/: config.ts  demoData.ts  dom.ts  highlight.ts  icons.ts  ipc.ts  markdown.ts  media.ts  platform.ts  sanitize.ts  scrollbar.ts  test-setup.ts  types.ts
client/etch-gui/src/lib/__tests__/: scrollbar.test.ts
client/etch-gui/src/lib/components/: AvatarFallback.svelte  CertDialog.svelte  ChannelBrowser.svelte  ChatWindow.svelte  EmojiPicker.svelte  ErrorToast.svelte  Icon.svelte  ImageModal.svelte  MediaRenderer.svelte  MessageGroup.svelte  MessageInput.svelte  ModalLayout.svelte  PasswordDialog.svelte  ServerConnectionModal.svelte  SettingsModal.svelte  TitleBar.svelte  UserContextMenu.svelte  UserPanel.svelte  VoiceUserList.svelte
client/etch-gui/src/lib/components/__tests__/: MessageGroup.test.ts  MessageInput.test.ts  SettingsAppearance.test.ts  VoiceUserList.test.ts
client/etch-gui/src/lib/components/settings/: SettingsAccount.svelte  SettingsAdvanced.svelte  SettingsAppearance.svelte  SettingsDeveloper.svelte  SettingsErrors.svelte  SettingsUpdates.svelte  SettingsVoice.svelte
client/etch-gui/src/lib/stores/: activeChannel.ts  audio.ts  channels.ts  compose.ts  errors.ts  eventRouter.ts  index.ts  layout.ts  messages.ts  overlay.ts  servers.ts  sfx.ts  sidebar.ts  theme.ts  tray.ts  updater.ts  user.ts  userVolumes.ts  voiceSettings.ts  voiceState.ts
client/etch-gui/src/lib/stores/__tests__/: README.md  channels.test.ts  errors.test.ts  helpers.ts  ipc-commands-audio.test.ts  ipc-commands-channels.test.ts  ipc-commands-messages.test.ts  ipc-commands-servers.test.ts  ipc-commands-userVolumes.test.ts  ipc-commands-voiceSettings.test.ts  ipc-events.test.ts  layout.test.ts  messages.test.ts  overlay.test.ts  sfx.test.ts  (+3 more)
client/etch-gui/src/routes/: +layout.svelte  +page.svelte
plugin/etch-bridge/: Cargo.toml  build.rs
plugin/etch-bridge/mumble-headers/: MumblePlugin.h  wrapper.h
plugin/etch-bridge/src/: lib.rs
shared/bridge-types/: Cargo.toml
shared/bridge-types/src/: lib.rs
tests/integration/: compose.yml  provision.py  run.sh
